fixed spacing in nav

--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,8 @@ header {
 .nav-options {
   text-align: center;
   width: 70px;
-  padding: 5px;
-  margin: 10px;
+  padding: 3px;
+  margin: 8px;
   border-bottom: 0.5px solid red;
 }
 
